[gd_scene load_steps=7 format=3 uid="uid://b6k3kywpvb4jf"]

[ext_resource type="Script" path="res://szenen/karte/main.gd" id="1_6ta4j"]
[ext_resource type="FontFile" uid="uid://2yw25hhlq7q3" path="res://assets/fonts/charm.ttf" id="3_llmsi"]
[ext_resource type="FontFile" uid="uid://c4flvhfr36rw" path="res://assets/fonts/baloo/Bold.ttf" id="3_o6xu0"]
[ext_resource type="FontFile" uid="uid://dtd7bey5gixxv" path="res://assets/fonts/Aleya/Alegreya-Italic-VariableFont_wght.ttf" id="4_j510w"]
[ext_resource type="FontFile" uid="uid://dnueucrsw7cgt" path="res://assets/fonts/baloo/Medium.ttf" id="9_ylvx8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lg6re"]
size = Vector2(936.805, 1410)

[node name="Karte" type="Node2D"]
position = Vector2(-4.76837e-07, 6)
scale = Vector2(0.100341, 0.1)
script = ExtResource("1_6ta4j")
typ = "Mensch"
story = "Testgeschichte"
default_position = Vector2(-4.76837e-07, 6)
default_rotation = null

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="Area"]
position = Vector2(1.18804e-05, -65)
shape = SubResource("RectangleShape2D_lg6re")

[node name="Titel" type="Node2D" parent="."]

[node name="Text" type="Label" parent="Titel"]
z_index = 1
offset_left = -458.437
offset_top = -780.0
offset_right = -241.437
offset_bottom = -686.0
scale = Vector2(1.61406, 1.17885)
theme_override_fonts/font = ExtResource("3_llmsi")
theme_override_font_sizes/font_size = 60
text = "Titel"

[node name="Typ" type="Node2D" parent="."]

[node name="Text" type="Label" parent="Typ"]
z_index = 1
offset_left = -309.0
offset_top = -110.0
offset_right = -131.0
offset_bottom = -16.0
scale = Vector2(1.39624, 0.974262)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_j510w")
theme_override_font_sizes/font_size = 60
text = "Mensch"

[node name="Effect" type="Node2D" parent="."]

[node name="Text" type="Label" parent="Effect"]
z_index = 1
offset_left = -458.0
offset_top = -30.0
offset_right = 665.0
offset_bottom = 411.0
scale = Vector2(0.816117, 0.885161)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_o6xu0")
theme_override_font_sizes/font_size = 60
text = "Effekt"
autowrap_mode = 3
justification_flags = 171
clip_text = true
text_overrun_behavior = 3

[node name="Stats" type="Node2D" parent="."]

[node name="Leben" type="Label" parent="Stats"]
z_index = 1
offset_left = -418.573
offset_top = -100.0
offset_right = -366.573
offset_bottom = 10.0
scale = Vector2(1.35662, 0.728156)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_llmsi")
theme_override_font_sizes/font_size = 60
text = "10"
clip_text = true
text_overrun_behavior = 3

[node name="Angriff" type="Label" parent="Stats"]
z_index = 1
offset_left = 388.675
offset_top = -100.0
offset_right = 440.675
offset_bottom = 9.99999
scale = Vector2(1.35662, 0.728156)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_llmsi")
theme_override_font_sizes/font_size = 60
text = "5"
clip_text = true
text_overrun_behavior = 3

[node name="Story" type="Node2D" parent="."]

[node name="Text" type="Label" parent="Story"]
z_index = 1
offset_left = -439.0
offset_top = 360.0
offset_right = 912.0
offset_bottom = 575.0
scale = Vector2(0.656734, 0.837333)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_ylvx8")
theme_override_font_sizes/font_size = 60
text = "Testgeschichte"
autowrap_mode = 3
justification_flags = 171
clip_text = true
text_overrun_behavior = 3

[node name="Level" type="Node2D" parent="."]

[node name="Text" type="Label" parent="Level"]
z_index = 1
offset_right = 40.0
offset_bottom = 23.0
text = "1"

[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_area_body_exited"]
[connection signal="mouse_entered" from="Area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_area_mouse_exited"]
